# crawler01

./: .gitignore  .pre-commit-config-fast.yaml  .pre-commit-config.yaml  CONFIG_GUIDE.md  NHC_爬虫使用说明.md  README.md  analyze_crawled_data.py  check_data_pipeline.py  check_database.py  chinacdc_test_results.json  create_crawler_table.py  debug_config_loading.py  debug_phase2.py  diagnose_postgres_auth.py  example.py  example_tasks.json  example_urls.txt  fix_postgres_permissions.py  init_database.py  output.json  push_baidu_urls.py  push_bochaai_queries.py  pyproject.toml  quick_setup.py  requirements.txt  requirements_nhc.txt  set_crawl_delays.py  set_crawl_limits.py  setup_config.py  setup_dev_env.py  setup_uv_env.py  start_phase2.py  start_scheduler.py  start_services_simple.py  test_chinacdc_access.py  test_selenium_grid.py  validate_config.py  website_analyzer.py  websites.md  临时记录.txt  (+10 more)
.clinerules/: my-rule.md
analysis/: data_analyzer.py
anti_crawl/: __init__.py  detector.py  middleware.py
config/: database.yaml  nhc_firefox_config.yaml  proxy.yaml
config/extraction/: bjcdc.yaml  nhc_new.yaml  test_site.yaml
config/sites/: ahcdc.yaml  bjcdc.yaml  cdctj.yaml  chinacdc.yaml  cqcdc.yaml  fjcdc.yaml  gdcdc.yaml  gscdc.yaml  gxcdc.yaml  gzcdc.yaml  hainancdc.yaml  hbcdc.yaml  hebeicdc.yaml  henancdc.yaml  hljcdc.yaml  hunancdc.yaml  jlscdc.yaml  jscdc.yaml  jxcdc.yaml  lncdc.yaml  nhc.yaml  nmgcdc.yaml  nxcdc.yaml  qhcdc.yaml  sccdc.yaml  scdc.yaml  sdcdc.yaml  shaanxicdc.yaml  sxcdc.yaml  template.yaml  test_site.yaml  xjcdc.yaml  xzcdc.yaml  yncdc.yaml  zjcdc.yaml
crawler/: __init__.py  dupefilters.py  extensions.py  items.py  media_pipelines.py  middlewares.py  models.py  pipelines.py  rule_engine.py  selenium_middleware.py  settings.py
crawler/core/: __init__.py  config_manager.py  extraction_engine.py  page_analyzer.py  site_detector.py
crawler/extractors/: __init__.py  base_extractor.py
crawler/middlewares/: __init__.py
crawler/monitoring/: __init__.py  alerter.py  api.py  db_instrumentation.py  exporter.py  metrics.py  scrapy_ext.py
crawler/pipelines/: __init__.py
crawler/spiders/: __init__.py  adaptive_spider.py  adaptive_spider_v2.py  base.py  base_spider.py  bochaai_spider.py  nhc_firefox_spider.py  simple_nhc.py  test.py  test_spider.py
crawler01/: items.py  middlewares.py  pipelines.py  settings.py
dashboard/: web_dashboard.py
dashboard/templates/: dashboard.html
data_processing/: __init__.py  cleaner.py  enhanced_pipelines.py  extractor.py  quality_assessor.py  validator.py
debug/: page_source_国务院信息_1754360893.html  page_source_疫情防控知识_1754357862.html
deployment/docker/: .env.example  Dockerfile  docker-compose.yml  redis.conf
deployment/monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml  (+1 more)
monitoring/: __init__.py  alert_system.py
proxy_pool/: __init__.py  manager.py  provider.py  validator.py
reports/: ai_report_generator.py  disease_analysis_report.json  quality_report_adaptive.json  report_generator.py
scheduler/: __init__.py  config_manager.py  load_balancer.py  task_monitor.py  task_scheduler.py  worker_node.py
scripts/: auto-restart.sh  backup.sh  deploy-production.sh  healthcheck.sh
tests/: requests_probe_chinacdc.py
texts/: 2025-08-05.txt
tools/: config_converter.py  config_manager.py  config_validator.py
(+15 files in other folders)
